Fix gap in comment level line after comment forms in reply mode

--- a/src/less/Comment.less
+++ b/src/less/Comment.less
@@ -18,22 +18,20 @@ ol > li.cd-commentPart-last {
 .cd-commentLevel.cd-commentLevel:not(ol) {
   list-style-type: none;
   list-style-image: none;
-  padding: 0 0 0 1em;
-  margin: 0 0 0 1em;
-  border: 1px solid #c8ccd1;
-  border-width: 0 0 0 1px;
+  margin: 0;
+  border: 0 solid #c8ccd1;
 }
 
 .mw-content-ltr .cd-commentLevel.cd-commentLevel:not(ol) {
-  padding: 0 0 0 1em;
-  margin: 0 0 0 1em;
-  border-width: 0 0 0 1px;
+  padding-left: 1em;
+  margin-left: 1em;
+  border-left-width: 1px;
 }
 
 .mw-content-rtl .cd-commentLevel.cd-commentLevel:not(ol) {
-  padding: 0 1em 0 0;
-  margin: 0 1em 0 0;
-  border-width: 0 1px 0 0;
+  padding-right: 1em;
+  margin-right: 1em;
+  border-right-width: 1px;
 }
 
 dl.cd-commentLevel > dd {
